<resources>
    <string name="app_name">AboutMePracticalG3</string>
    <string name="name">Sheng Ming</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut dictum tortor, vitae dictum massa. Sed non augue sed orci finibus varius quis at sapien. Mauris et purus ligula. Suspendisse congue accumsan malesuada. Donec euismod efficitur tellus, a congue nisl eleifend ut. Phasellus eget eros vel justo pharetra dignissim. Phasellus sed varius sem. In ac ante sit amet odio egestas condimentum. Vestibulum non turpis molestie, blandit nulla vel, venenatis tortor.  Vestibulum tempor, eros et auctor euismod, arcu nisl accumsan enim, sit amet laoreet ligula lacus sit amet ipsum. Etiam semper a metus eget faucibus. Praesent nec interdum nunc, quis tincidunt mi. In ullamcorper libero non libero mattis blandit. Sed ut ex elementum, laoreet mi vel, imperdiet dolor. Vivamus quis tristique nulla, id iaculis felis. Vestibulum at commodo ligula, ac dignissim arcu. Quisque non urna faucibus, fermentum lectus at, tincidunt nisi. Integer venenatis est vel dignissim volutpat.  Nam rhoncus lobortis risus quis semper. Donec lectus turpis, tempor sit amet est et, consectetur vestibulum justo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed volutpat est ex, aliquet finibus enim cursus varius. Maecenas ut diam eget eros hendrerit pretium a in lorem. Maecenas tempor, tellus quis suscipit pulvinar, ligula tortor pharetra mauris, viverra vehicula mi lectus vel ante. Sed a purus et sem mollis commodo eget quis enim. Suspendisse venenatis nulla et eleifend dapibus. Etiam non aliquet velit. Fusce elementum interdum interdum. Donec malesuada laoreet sollicitudin. Quisque iaculis blandit tellus a malesuada. Etiam hendrerit orci et interdum suscipit.</string>
    <string name="what_is_your_ninckname">what is your nick name?</string>
    <string name="done">Done</string>
</resources>